shifter plugin config

--- a/Plugins/shifter.ini
+++ b/Plugins/shifter.ini
@@ -1,17 +1,17 @@
 [MAIN]
-ControlIndex=0
+ControlIndex=4
 Enabled=1
 AutoNeutral=1
 RequireClutch=1
-Key0=109
-Key1=10a
-Key2=10b
-Key3=10c
-Key4=10d
-Key5=10e
-Key6=110
-Key7=2c
-Key8=10c
-Key9=10b
+Key0=10a
+Key1=10b
+Key2=10c
+Key3=10d
+Key4=10e
+Key5=10f
+Key6=109
+Key7=31
+Key8=111
+Key9=112
 Sequential=0
 clutchThreshold=0.350000
