--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -303,7 +303,7 @@ usecubicenvironmentmaps_replay=
 [car42]
 name=Skoda Fabia R5 evo
 rbrvr_seat0=-0.001280,0.102880,0.039360
-rbrvr_seat1=0.318640,0.801764,-0.185041
+rbrvr_seat1=0.311520,0.801764,-0.199281
 rbrvr_seat2=-0.664241,-0.239920,0.001200
 fulldashposition_2d=
 fulldashposition_vr=
@@ -1207,7 +1207,7 @@ usecubicenvironmentmaps_replay=
 [car43]
 name=Ford Escort Mk V RS Cosworth Grp
 rbrvr_seat0=-0.001280,0.102880,0.039360
-rbrvr_seat1=0.342880,0.148803,-0.042721
+rbrvr_seat1=0.347600,0.148803,-0.056961
 rbrvr_seat2=-0.664241,-0.239920,0.001200
 fulldashposition_2d=
 fulldashposition_vr=
@@ -1603,6 +1603,142 @@ usecubicenvironmentmaps_replay=
 
 [stage449]
 name=SSS Valasske Mezirici
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage457]
+name=El Fargue SS1
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage129]
+name=Peyregrosse Mandagout
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage458]
+name=Rosciszow-Walim
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage459]
+name=Walim-Rosciszow
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage320]
+name=Slovakia Ring 2014
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage397]
+name=Uhorna
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage405]
+name=Uhorna snow II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[car95]
+name=Peugeot 306 Maxi Kit Car
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.326000,0.171602,-0.093121
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[car69]
+name=Citroen C3 R5
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.332160,0.908565,-0.116161
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[car48]
+name=Mitsubishi Lancer Evo IX R4
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.364160,-0.544638,-0.026641
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[stage394]
+name=Verkiai 2010
 renderquality=
 renderquality_replay=
 particlequality=
