more car setups

--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -1747,3 +1747,113 @@ rendercarshadow=
 rendercarshadow_replay=
 usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
+
+[car97]
+name=Fiat Abarth 500 R3T
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.338240,0.862482,0.023519
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[stage424]
+name=Biskupice 2004
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1016]
+name=Lantosque - Luceram
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage417]
+name=Lucéram - Col Saint-Roch
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1045]
+name=Sainte - Agnes
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage460]
+name=PS Valstagna
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1120]
+name=Palvaanjärvi Sprint
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage461]
+name=Sant Bartumeu - Valldoreix
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage399]
+name=Torsby shakedown
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
