--- a/Plugins/NGPCarMenu.ini
+++ b/Plugins/NGPCarMenu.ini
@@ -503,6 +503,13 @@ ForceOverlaySupport = 0
 ShowReplayTimeResultMessage = 16
 F11ScreenshotMode = 3
 DeadzoneByTimeMSecGearShift = 0
+CockpitSteeringWheel_Replay=0
+CockpitWindscreen_Replay=0
+CockpitWipers_Replay=0
+DistanceUnit=0
+TemperatureUnit=0
+AdjustSteeringRotation=0
+WheelProtocol=0
 
 
 ;
