--- a/RichardBurnsRally.ini
+++ b/RichardBurnsRally.ini
@@ -36,7 +36,7 @@ telemetryTics = 5
 udpTelemetry =1
 udpTelemetryAddress = 127.0.0.1
 udpTelemetryPort = 6776
-fullscreenWindow=1
+fullscreenWindow=true
 fixAspectRatio=1
 highQualityCubicEnvironmentMaps=0
 fixVSync=1
