--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -631,7 +631,7 @@ maxlodout_obj_replay=
 
 [stage20]
 name=Harwood Forest
-renderquality=
+renderquality=low
 renderquality_replay=
 particlequality=
 particlequality_replay=
@@ -897,7 +897,7 @@ usecubicenvironmentmaps_replay=
 [car81]
 name=Ford Fiesta Rally2
 rbrvr_seat0=-0.001280,0.102880,0.039360
-rbrvr_seat1=0.332720,0.215922,-0.092241
+rbrvr_seat1=0.338880,0.185762,-0.072721
 rbrvr_seat2=-0.664241,-0.239920,0.001200
 fulldashposition_2d=
 fulldashposition_vr=
@@ -1269,7 +1269,7 @@ maxlodout_obj=
 maxlodout_obj_replay=
 
 [stage1065]
-name=Aittajärvi
+name=Aittajï¿½rvi
 renderquality=
 renderquality_replay=
 particlequality=
@@ -1789,7 +1789,7 @@ maxlodout_obj=
 maxlodout_obj_replay=
 
 [stage417]
-name=Lucéram - Col Saint-Roch
+name=Lucï¿½ram - Col Saint-Roch
 renderquality=
 renderquality_replay=
 particlequality=
@@ -1824,7 +1824,7 @@ usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
 
 [stage1120]
-name=Palvaanjärvi Sprint
+name=Palvaanjï¿½rvi Sprint
 renderquality=
 renderquality_replay=
 particlequality=
@@ -1849,6 +1849,128 @@ usecubicenvironmentmaps_replay=
 
 [stage399]
 name=Torsby shakedown
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage344]
+name=Azov I
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage170]
+name=Greenhills II Snow
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage470]
+name=Narva Kreenholmi Rahvasprint 2022
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage374]
+name=Shurdin I
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[car58]
+name=Skoda 130 RS Grp2
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.317040,0.433763,-0.199201
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[car59]
+name=Skoda Favorit 136 L GrpA
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.331120,-0.036398,-0.085121
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[stage1085]
+name=Piren Tarmac
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage235]
+name=NewBobs II Tarmac
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage245]
+name=Chirdonhead Snow
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage244]
+name=Falstone Snow
 renderquality=
 renderquality_replay=
 particlequality=
