more new stages

--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -492,7 +492,7 @@ usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
 
 [stage1040]
-name=Gästabudstrofen
+name=Gï¿½stabudstrofen
 renderquality=
 renderquality_replay=
 particlequality=
@@ -1246,7 +1246,7 @@ maxlodout_obj_replay=
 
 [stage423]
 name=Torsby 2018 Sprint
-renderquality=
+renderquality=low
 renderquality_replay=
 particlequality=
 particlequality_replay=
@@ -1979,3 +1979,75 @@ rendercarshadow=
 rendercarshadow_replay=
 usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
+
+[stage1116]
+name=Hakolahti sprint
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1110]
+name=Kaihuavaara 2022
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage101]
+name=Autiovaara II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage332]
+name=Kuadonvaara
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage12]
+name=Sikakama
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1089]
+name=Vennivaara
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
