--- a/rbrvr.cfg
+++ b/rbrvr.cfg
@@ -16,7 +16,7 @@
 ; cameraShakeDisable: Set to 1 to disable camera shaking in-car
 ; camLockHorizon: Lock camera to horizon. 0 = no lock, 1 = lock roll axis, 2 = lock roll + pitch axes
 noDesktop=0
-renderScale=1.250000
+renderScale=1.25
 hudScale=1.000000
 hudDistance=1.000000
 codriverMode=0
@@ -57,7 +57,7 @@ seat2=-0.680641,0.165680,-0.097200
 seat0=-0.001280,0.102880,0.039360
 seat1=0.338880,0.185762,-0.072721
 seat2=-0.664241,-0.239920,0.001200
-rsfcarid=81
+rsfcarid=
 
 [car_6]
 seat0=0.010000,0.083600,0.069440
