more day-to-day adjustments

--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -2051,3 +2051,14 @@ usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
 maxlodout_obj=
 maxlodout_obj_replay=
+
+[stage410]
+name=Vargassence
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
