--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -2062,3 +2062,155 @@ rendercarshadow=
 rendercarshadow_replay=
 usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
+
+[car102]
+name=Hyundai i20 N Rally2
+rbrvr_seat0=-0.001280,0.102880,0.039360
+rbrvr_seat1=0.354400,0.079602,-0.018481
+rbrvr_seat2=-0.664241,-0.239920,0.001200
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=
+setupsnow=
+
+[stage372]
+name=Carvalho de Rei 2008 reverse
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage34]
+name=East-West
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage301]
+name=Karowa 2009
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage62]
+name=Prospect Ridge
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage356]
+name=Travanca do Monte
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage1020]
+name=El Cubilete
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage1092]
+name=Cueva Santa
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+maxlodout_obj=
+maxlodout_obj_replay=
+
+[stage168]
+name=Liptakov 1
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage463]
+name=Odry II
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage131]
+name=Peklo
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage436]
+name=Barak
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage427]
+name=Zaton
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
