--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -3,6 +3,9 @@ ProfileVersion=1
 ShowAdvancedOptions=true
 UseDXVK=
 UseDXVKMode=0
+AppMaximized=0
+AppLocation=695 185
+AppSize=850 728
 [AudioFMOD]
 Settings.enableFMOD=true
 Car00.masterVolume=1
